BAU - set max width on logo to stop it stretching

--- a/app/assets/sass/custom/north-yorkshire-county-council.scss
+++ b/app/assets/sass/custom/north-yorkshire-county-council.scss
@@ -14,6 +14,7 @@ $logo-image-height: 2em;
   @if $logo-image-height != null {
     .custom-branding-image {
       max-height: $logo-image-height;
+      max-width: 100%;
     }
   }
 
